Re-did 6A to make assignment 6B
Final submission

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,68 @@
-
-
 body{
+    background-color:#a57548;
+    position: absolute;
+    padding-bottom: 50px;
+}
+
+header{
+    font-family: 'Aoboshi One', serif;
+}
+#logo{
+    color: rgb(255, 227, 174);
+}
+
+h3{
+    color:rgb(255, 227, 174);
+}
+
+h5{
+    position: absolute;
+    left: 1700px;
+    font-size: 18px;
+}
+div h4{
+    /* color: #fcd7ad; */
+    color: rgb(255, 227, 174);
+}
+
+li{
+color: rgb(255, 240, 211);
+}
+
+header #logo{
+    font-size: 45px;
+}
+
+header h3{
+    font-size: 33px;
+    padding-left: 510px;
+}
+
+img{
+   width: 400px;
+   height: 309px;
+   padding-left: 420px;
+}
+
+h4{
+    font-size: 20px;
+}
+
+li{
+    font-size: 16px;
+}
+
+li a{
+    color:rgb(255, 240, 211)
+}
+
+li a:hover{
+    color:#82ddf0;
+}
+
+
+
+/* body{
     background-color: aliceblue;
 }
 
@@ -33,4 +95,4 @@ a:visited{
     top: 200px;
     left: 200px;
 }
-
+ */
